--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-loading": "^2.0.3",
     "react-qr-code": "^2.0.11",
     "react-toastify": "^9.1.1",
+    "sass": "^1.60.0",
     "wagmi": "^0.12.2",
     "web3modal": "^1.9.12"
   },
